Fix horiz spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 .view{
     min-height: 90vh;
     width: 90vw;
-    padding: 1vw 5vh;
+    padding: 1vw 2.5vw;
     margin: auto;
     padding-bottom: 100px;
     text-align: center;
